# no12-rs

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml  run_postgres.sh
.github/workflows/: main.yml
src/: app.rs  handlers.rs  main.rs  models.rs  routes.rs
