[package]
name = "no12-rs"
version = "0.1.0"
authors = ["Caio Raposo <caioraposo@protonmail.com>", "Tiago Lopes <tiagolopesdemoura@protonmail.com>"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
jsonwebtoken = "7.0.1"
pretty_env_logger = "0.4"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
chrono = "0.4.10"
uuid = { version = "0.6", features = ["serde", "v4"] }
